# cpuminer-yescrypt

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.iphone  Makefile.am  README.md  android-2.sh  android.sh  autogen.sh  build.sh  configure.ac  cpu-miner.c  cpu-miner.c.lmaddox  cpu-miner.c.lmaddox-android  cpu-miner.c.lmaddox-iphone  cpu-miner.c.lmaddox-nice  cpu-miner.c.local  cpu-miner.c.local-android  cpu-miner.c.local-iphone  cpu-miner.c.local-nice  cpu-miner.c.onion  cpu-miner.c.onion-nice  cpuminer.bkf  faildows.sh  iphone.sh  miner.h  sysinfos.c  util.c
.circleci/: config.yml
